# PFSxDESI-multi-fish

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC_IMPLEMENTATION.md  SPEC_IMPLEMENTATION_v2.md  SPEC_IMPLEMENTATION_v3.md  SPEC_WRITEUP.md  SPEC_WRITEUP_v2.md  SPEC_WRITEUP_v3.md  literature.md  pyproject.toml
configs/: default.yaml
notebooks/: figures.ipynb  figures_executed.ipynb
paper/: .gitignore  PFSxDESI-multi-fish.aux  PFSxDESI-multi-fish.bbl  PFSxDESI-multi-fish.bib  PFSxDESI-multi-fish.blg  PFSxDESI-multi-fish.out  PFSxDESI-multi-fish.tex  PFSxDESI-multi-fish.toc
pfsfog/: README.md  __init__.py  __main__.py  _fisher_joint_parallel.py  _jax_cache.py  builtin_pkmu.py  cli.py  cli_multitrace.py  config.py  cosmo.py  covariance.py  covariance_mt_general.py  derivatives.py  eft_params.py  fisher.py  fisher_full_area.py  fisher_joint.py  fisher_mt.py  fisher_mt_general.py  plots.py  prior_export.py  ps1loop_adapter.py  scenarios.py  surveys.py
ps_1loop_jax/: README.md
scripts/: README.md  _bench_joint_fisher.py  _compare_autodiff_vs_stencil.py  _per_sample_breakdown.py  fig_cov_validation.py  fig_deriv_validation.py  fig_fisher_contours.py  fig_fisher_info_density.py  fig_ms09_convergence.py  make_all_figures.py  run_all_scenarios.py  run_coevolution_test.py  run_desi_multisample.py  run_fshared_joint.py  run_fshared_sweep.py  run_joint_fisher.py  run_kmax_nbar_sweeps.py  run_pair_comparison.py  run_parameter_importance.py  run_sensitivity.py
survey_specs/: DESI_nz_elg_fdr.txt  DESI_nz_elg_fine.txt  DESI_nz_lrg_fdr.txt  DESI_nz_lrg_fine.txt  (+6 more)
(+102 files in other folders)
